# Robot_Arm

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  ^  idf_component.yml  migration_plan.md  reconfigure.bat  sdkconfig.defaults
.cache/clangd/index/: BLE.c.9F20CA3841552CF7.idx  BLE.h.25BD948756E09F73.idx  Control.c.ED953AF17E37CE92.idx  Control.h.046D7993D5F15A4F.idx  I2C.c.5A5CD4AD7DE9F487.idx  I2C.c.A7BB8EA5A5209C87.idx  I2C.c.D92B0A663C5968C9.idx  I2C.h.90D32FE38566216B.idx  I2C.h.BCF0C69C10855FD6.idx  I2C.h.BFC1897DC26D6D88.idx  Kinematics.c.D098D85C33520CE1.idx  Kinematics.c.E7DBA9D674E16A62.idx  Kinematics.h.05A0598C30EE401C.idx  Kinematics.h.203D67B26599D1C2.idx  LED.c.0087A8D7C2E95930.idx  LED.c.205BA4821711D468.idx  LED.c.907E3076FEADC51D.idx  LED.h.AD1DCD5B5C0DF1D1.idx  LED.h.DECC692436A54EA9.idx  LED.h.E628E37A11CAECEA.idx  MPU6050.c.5E51A9B632011976.idx  MPU6050.c.F010323E995EBF19.idx  MPU6050.h.16B9D3BF05B36C35.idx  MPU6050.h.5E35D32B08B63AD6.idx  MPU6050_reg.h.31705FC391F603DE.idx  MPU6050_reg.h.D3105FDA6A65A408.idx  OpenAI.c.40263739D8EA419C.idx  OpenAI.c.C40BCB2B3502006C.idx  OpenAI.c.FB1AF4C25D8F4D6C.idx  OpenAI.h.3BC4EAD648BDA9CB.idx  OpenAI.h.3D4784F01B0694BB.idx  OpenAI.h.D3A4CF22C2F1ECCA.idx  (+141 more)
.claude/: settings.json  settings.local.json
components/Communication/: CMakeLists.txt
components/Communication/WebServer/: WebServer.c  WebServer.h
components/Communication/WiFi/: WiFi.h
components/Hardware/: CMakeLists.txt
components/Hardware/I2C/: I2C.c  I2C.h
components/Hardware/LED/: LED.c
components/Hardware/MPU6050/: MPU6050.c  MPU6050.h  MPU6050_reg.h
components/Hardware/PCA9685/: PCA9685.c  PCA9685.h
components/Hardware/Servo/: Servo.c  Servo.h
components/Middleware/: CMakeLists.txt
components/Middleware/Kinematics/: Kinematics.c  Kinematics.h
components/Middleware/Script/: Script.c  Script.h
main/: CMakeLists.txt  idf_component.yml  main.c
prepare/: main.c
slave/: build_slave.bat
(+14 files in other folders)
